# lazuli

./: .gitignore  Cargo.toml  README.md
.config/: medic.toml
src/: cli.rs  config.rs  lib.rs  main.rs
